--- a/validaciones.html
+++ b/validaciones.html
@@ -14,8 +14,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
             crossorigin="anonymous">
     </head>
-    <body>
-        <div class="container" style="margin: 5%" >
+    <body style="background: red">
+            <div class="jumbotron">
+                <h1>Hello, world!</h1>
+                <p>...</p>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            </div>
+        <div class="container" style="margin: 5%; background: gray; padding: 2cm" >
             <div class="row">
                 <form id="validacion" action="" method="" class="">
                     <div class="form-group">
@@ -71,6 +76,8 @@
                                     </div>
                                 </div>
                         </div>
+
+                        
                     
                     <br>
                     <div class="row">
