--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   
-    <link rel="stylesheet" href="index.css">
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <header id="app-header">
 
-    <script src="index.js"></script>
-    
-    <title>Document</title>
-</head>
-<body>
+            <h1>TVify</h1>
+            <h2>Todos los shows de TV</h2>
 
-    <h2 id="holis">
-        hola mundo
-    </h2>
-
-    <p id='texto'>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem
-        Doloremque nulla inventore ut, assumenda incidunt vero!
-        Quibusdam doloremque velit provident non ratione eligendi 
-        soluta quam consectetur, molestiae eaque fuga nulla officia.
-    </p>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-    </script>
-
-    
+        </header>
 
 
-</body>
+        <section id="app-body">
+
+        </section>
+
+
+        <footer id="app-footer">
+            <p> Hecho con <3 por WFLS </p>
+        </footer>
+        <script src="" async defer></script>
+    </body>
 </html>
